--- a/todo/todo.html
+++ b/todo/todo.html
@@ -14,7 +14,7 @@
     <div class="topbar">
         <div class="presentacion">
             <div class="userIcon">MA</div>
-            <p>Hola, <span>Mateo</span></p>
+            <p>Hola, <span>Mateo</span>!</p>
         </div>
         <div class="icons">
             <div class="homeSvg">
@@ -32,18 +32,25 @@
 
     </div>
     <div class="container">
+        <h2>Cosas para hacer hoy!</h2>
         <div class="todo-app">
-            <h2>To-Do-list <img src="../images/icon.png" alt=""></h2>
             <div class="row">
-                <input type="text" id="input-box" placeholder="Add your text">
+                <input type="text" id="input-box" placeholder="Ser feliz...">
                 <button onclick="addTask()">Add</button>
             </div>
-            <ul id="list-container">
-                <!-- <li class="checked">Task 1</li>
-                <li>Task 2</li>
-                <li>Task 3</li> -->
-            </ul>
         </div>
+        <ul id="list-container">
+            <!-- <li class="checked">
+                Task 1
+                <div class="iconShare">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                        <path fill-rule="evenodd" d="M15.75 2.25H21a.75.75 0 0 1 .75.75v5.25a.75.75 0 0 1-1.5 0V4.81L8.03 17.03a.75.75 0 0 1-1.06-1.06L19.19 3.75h-3.44a.75.75 0 0 1 0-1.5Zm-10.5 4.5a1.5 1.5 0 0 0-1.5 1.5v10.5a1.5 1.5 0 0 0 1.5 1.5h10.5a1.5 1.5 0 0 0 1.5-1.5V10.5a.75.75 0 0 1 1.5 0v8.25a3 3 0 0 1-3 3H5.25a3 3 0 0 1-3-3V8.25a3 3 0 0 1 3-3h8.25a.75.75 0 0 1 0 1.5H5.25Z" clip-rule="evenodd" />
+                    </svg>       
+                </div>
+            </li>
+            <li class="checked">Task 2</li>
+            <li>Task 3</li> -->
+        </ul>
     </div>
 
     <script src="todos.js"></script>
